kubernetes/argo-cd/projects/production-hm/clickhouse/kubernetes-manifests/hm-clickhouse-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-clickhouse-ingress
  namespace: production-hm-clickhouse
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/routing/providers/kubernetes-ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: clickhouse.hongbomiao.com
    # https://argo-cd.readthedocs.io/en/stable/user-guide/resource_hooks
    argocd.argoproj.io/hook: PostSync
  labels:
    app.kubernetes.io/name: hm-clickhouse-ingress
    app.kubernetes.io/part-of: production-hm-clickhouse
spec:
  rules:
    - host: clickhouse.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-clickhouse
                port:
                  number: 8123
  tls:
    - hosts:
        - clickhouse.hongbomiao.com
      secretName: production-hm-clickhouse-certificate
